handle new message. add test